docs/0.15/_sources/api/gammapy.modeling.Datasets.rst.txt
Datasets
========

.. currentmodule:: gammapy.modeling

.. autoclass:: Datasets
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Datasets.is_all_same_shape
      ~Datasets.is_all_same_type
      ~Datasets.parameters

   .. rubric:: Methods Summary

   .. autosummary::

      ~Datasets.copy
      ~Datasets.count
      ~Datasets.index
      ~Datasets.info_table
      ~Datasets.read
      ~Datasets.stack_reduce
      ~Datasets.stat_sum
      ~Datasets.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: is_all_same_shape
   .. autoattribute:: is_all_same_type
   .. autoattribute:: parameters

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: count
   .. automethod:: index
   .. automethod:: info_table
   .. automethod:: read
   .. automethod:: stack_reduce
   .. automethod:: stat_sum
   .. automethod:: write
