docs/0.16/_sources/api/gammapy.modeling.Datasets.rst.txt
Datasets
========

.. currentmodule:: gammapy.modeling

.. autoclass:: Datasets
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Datasets.is_all_same_shape
      ~Datasets.is_all_same_type
      ~Datasets.names
      ~Datasets.parameters

   .. rubric:: Methods Summary

   .. autosummary::

      ~Datasets.append
      ~Datasets.clear
      ~Datasets.copy
      ~Datasets.count
      ~Datasets.extend
      ~Datasets.index
      ~Datasets.info_table
      ~Datasets.insert
      ~Datasets.pop
      ~Datasets.read
      ~Datasets.remove
      ~Datasets.reverse
      ~Datasets.stack_reduce
      ~Datasets.stat_sum
      ~Datasets.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: is_all_same_shape
   .. autoattribute:: is_all_same_type
   .. autoattribute:: names
   .. autoattribute:: parameters

   .. rubric:: Methods Documentation

   .. automethod:: append
   .. automethod:: clear
   .. automethod:: copy
   .. automethod:: count
   .. automethod:: extend
   .. automethod:: index
   .. automethod:: info_table
   .. automethod:: insert
   .. automethod:: pop
   .. automethod:: read
   .. automethod:: remove
   .. automethod:: reverse
   .. automethod:: stack_reduce
   .. automethod:: stat_sum
   .. automethod:: write
